airflow_docker/logs/dag_id=sql_hook_to_s3/run_id=scheduled__2023-11-08T03:30:00+00:00/task_id=load_data_from_pg_to_s3/attempt=5.log
[2023-11-08T14:37:59.965+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: sql_hook_to_s3.load_data_from_pg_to_s3 scheduled__2023-11-08T03:30:00+00:00 [queued]>
[2023-11-08T14:38:00.022+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: sql_hook_to_s3.load_data_from_pg_to_s3 scheduled__2023-11-08T03:30:00+00:00 [queued]>
[2023-11-08T14:38:00.040+0000] {taskinstance.py:1361} INFO - Starting attempt 5 of 6
[2023-11-08T14:38:00.098+0000] {taskinstance.py:1382} INFO - Executing <Task(PythonOperator): load_data_from_pg_to_s3> on 2023-11-08 03:30:00+00:00
[2023-11-08T14:38:00.117+0000] {standard_task_runner.py:57} INFO - Started process 947 to run task
[2023-11-08T14:38:00.131+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'sql_hook_to_s3', 'load_data_from_pg_to_s3', 'scheduled__2023-11-08T03:30:00+00:00', '--job-id', '155', '--raw', '--subdir', 'DAGS_FOLDER/sql_hook_to_s3_dag.py', '--cfg-path', '/tmp/tmpo28kvy7u']
[2023-11-08T14:38:00.139+0000] {standard_task_runner.py:85} INFO - Job 155: Subtask load_data_from_pg_to_s3
[2023-11-08T14:38:00.349+0000] {task_command.py:416} INFO - Running <TaskInstance: sql_hook_to_s3.load_data_from_pg_to_s3 scheduled__2023-11-08T03:30:00+00:00 [running]> on host 5cb9101badf1
[2023-11-08T14:38:00.815+0000] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_EMAIL='safarnejad.ho@gmail.com' AIRFLOW_CTX_DAG_OWNER='safarnejad' AIRFLOW_CTX_DAG_ID='sql_hook_to_s3' AIRFLOW_CTX_TASK_ID='load_data_from_pg_to_s3' AIRFLOW_CTX_EXECUTION_DATE='2023-11-08T03:30:00+00:00' AIRFLOW_CTX_TRY_NUMBER='5' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-11-08T03:30:00+00:00'
[2023-11-08T14:38:00.850+0000] {base.py:73} INFO - Using connection ID 'orders-pg-conn' for task execution.
[2023-11-08T14:38:00.922+0000] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 192, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 209, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/sql_hook_to_s3_dag.py", line 25, in load_data_to_file
    cursor.execute('SELECT * FROM order WHERE date <= 20220501')
psycopg2.errors.SyntaxError: syntax error at or near "order"
LINE 1: SELECT * FROM order WHERE date <= 20220501
                      ^

[2023-11-08T14:38:00.948+0000] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=sql_hook_to_s3, task_id=load_data_from_pg_to_s3, execution_date=20231108T033000, start_date=20231108T143759, end_date=20231108T143800
[2023-11-08T14:38:00.981+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 155 for task load_data_from_pg_to_s3 (syntax error at or near "order"
LINE 1: SELECT * FROM order WHERE date <= 20220501
                      ^
; 947)
[2023-11-08T14:38:01.010+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-11-08T14:38:01.055+0000] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
